# glasses-detection-system

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/: alembic.ini
backend/app/: main.py
backend/app/api/: annotations.py  camera.py  datasets.py  history.py  inference.py  models.py  overview.py  training.py
backend/app/core/: config.py  database.py  errors.py
backend/app/domain/: geometry.py  inference.py  labels.py  training.py
backend/app/inference/: __init__.py  fake.py  onnx.py  pretrained.py
backend/app/repositories/: datasets.py  history.py  models.py  training.py
backend/app/services/: image_inference.py  preannotation.py  pretrained_models.py  publication.py  rendering.py  resources.py  storage.py  training.py  uploads.py  yunet.py
backend/app/training/: worker.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_initial.py
backend/tests/: test_health.py
backend/tests/api/: test_camera_overview.py  test_datasets.py  test_inference_history.py  test_training.py
backend/tests/deploy/: test_scripts.py
backend/tests/domain/: test_geometry.py  test_training_settings.py
backend/tests/inference/: test_onnx_engine.py  (+1 more)
docs/: OPERATIONS.md  PRIVACY.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.vue  main.ts  router.ts
frontend/tests/: annotation-canvas.test.ts  detection-canvas.test.ts  training-progress.test.ts
resources/: manifest.json
scripts/: setup.ps1  start.ps1  test.ps1
(+26 files in other folders)
