[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "glasses-detection-system"
version = "0.1.0"
description = "Local glasses detection training and inference workbench"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi==0.139.2",
  "uvicorn[standard]==0.51.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "sqlalchemy==2.0.51",
  "alembic==1.18.5",
  "aiosqlite==0.22.1",
  "python-multipart==0.0.32",
  "pillow==12.3.0",
  "numpy==2.5.1",
  "opencv-python==5.0.0.93",
  "imagehash==4.3.2",
  "httpx==0.28.1",
  "kaggle==2.2.3",
]

[project.optional-dependencies]
ml = [
  "ultralytics==8.4.104",
  "torchvision==0.28.0",
  "onnx==1.22.0",
  "onnxslim==0.1.94",
  "onnxruntime==1.27.0",
]
dev = [
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "ruff==0.15.22",
]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
src = ["backend/app", "backend/tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
